# Plmux

./: .gitignore  License  README.md  README.zh-CN.md  conftest.py  pyproject.toml  release.md  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.trae/documents/: fix-image-flicker.md  image-protocol-passthrough.md
docs/: configuration.md  configuration.zh-CN.md  copy_mode.en.md  copy_mode.md  keybindings.md  keybindings.zh-CN.md  plugins.md  plugins.zh-CN.md  themes.md  themes.zh-CN.md  web-client.md  web-client.zh-CN.md
plmux/: __init__.py  __main__.py  debug_log.py  format.py  state_bridge.py  workspace.py
plmux/app/: __init__.py  bootstrap.py  config_watcher.py  event_loop.py  input_reader.py  mouse_handler.py  persistence.py  remote.py  tickers.py  utils.py
plmux/buffer/: manager.py
plmux/cli/: __init__.py  commands.py
plmux/config/: __init__.py  defaults.json  loader.py  schema.py
plmux/daemon/: __init__.py  client.py  server.py  (+2 more)
plugins/: README.md
tests/: test_app.py  test_broadcast.py  test_config_loader.py  test_config_schema.py  test_copy_mode.py  test_event_bus.py  test_extensions_registry.py  test_fastscreenc.py  test_modes_cmdline.py  test_modes_dispatcher.py  test_mouse_parse.py  test_perf_debug.py  test_send_keystroke.py  test_terminal_color.py  test_terminal_render.py  test_terminalsession_and_daemon.py  test_theme_and_config.py  test_web.py  test_windows_specific.py  test_workspace.py  test_ws_kernel.py
(+110 files in other folders)
