[project]
name = "plmux"
version = "0.1.0"
description = "Cross-platform lightweight tmux-like terminal multiplexer (Rich + C extension)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Frames" }]
dependencies = [
  "rich>=13,<16",
  "ptyprocess>=0.7,<0.8; sys_platform != 'win32'",
  "pywinpty>=3,<4; sys_platform == 'win32'",
  "blessed>=1.20,<2",
  "jinxed>=1.1.0,<2; sys_platform == 'win32'",
]

[project.optional-dependencies]
windows = ["pywinpty>=3,<4"]
speed = ["uvloop>=0.19,<1"]
dev = ["pytest>=7,<9"]

[project.scripts]
plmux = "plmux.app:run"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
plmux = ["themes/*.json", "config/defaults.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
